# xWebVFB

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml  release.yml
.gitlab-ci/: arm64-cross.txt  debian-install-arm.sh  debian-install.sh
Xext/: panoramiX.c  saver.c  shape.c  xace.h  xf86bigfont.c
Xi/: exevents.c  xibarriers.c  xichangecursor.c  xiwarppointer.c
composite/: compwindow.c
dix/: cursor.c  dispatch.c  dix_priv.h  dixfonts.c  events.c  globals.c  grabs.c  main.c  mainvnc.h  meson.build  webvncutils.c  window.c
dix/vnc_libs/: htmlPage.h  img.h  logo.h  vnc_input.h  vncqueue.h  websocket.h
dix/vnc_libs/assets/: index.html
hw/kdrive/ephyr/: ephyr.c  ephyrinit.c
hw/kdrive/src/: kdrive.c
hw/vfb/: InitOutput.c
hw/xfree86/common/: xf86Configure.c  xf86Init.c
hw/xfree86/ddc/: ddc.c
hw/xfree86/int10/: helper_exec.c
hw/xnest/: Display.c  Events.c  Init.c
hw/xquartz/: darwin.c
hw/xwayland/: xwayland-input.c  xwayland-output.c  xwayland-screen.c
hw/xwin/: InitOutput.c  winerror.c
include/: os.h
mi/: mieq.c  mioverlay.c  mipointer.c  miwindow.c
miext/damage/: damage.c
miext/sync/: meson.build
os/: connection.c  io.c  log.c  osdep.h  osinit.c  utils.c  xsha1.c
record/: record.c
render/: animcur.c  render.c
test/: meson.build
xfixes/: cursor.c
xkb/: xkbActions.c
xwebvnc/: main.c  meson.build  vncInput.c  vncQueue.c  webSocket.c  webvnc.h
xwebvnc/libs/: base64.h  htmlPage.h  logo.h  meson.build  sha1.h
xwebvnc/libs/assets/: index.html
(+14 files in other folders)
